--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,6 +8,11 @@ body {
   background-color: #f4f4f9;
   color: #333;
 }
+
+a{
+  text-decoration: none;
+  color: #ffffff;
+}
 /* HEADER */
 
 header {
@@ -116,7 +121,38 @@ button:hover {
   background-color: #005fa3;
 }
 
+#loginError {
+  display: block;
+  margin-top: 1rem;
+  color: #eb5765;
+}
+
+.password-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+#password {
+  flex: 1;
+  padding-right: 40px; /* Platz für das Auge-Icon */
+}
+
+.toggle-password {
+  position: absolute;
+  right: 10px;
+  cursor: pointer;
+  font-size: 20px;
+  color: #666;
+}
+
 /* FACULTY */
+
+#notSelectedCourse {
+  display: block;
+  margin-top: 1rem;
+  color: #eb5765;
+}
 
 .faculty-info {
   display: none;
@@ -210,6 +246,26 @@ main {
 
 /* TABELLE */
 
+#loadingScreen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(33, 33, 33, 0.9);
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  font-size: 1.2rem;
+  color: #ffffff;
+}
+
+#mainContent{
+  display: block;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
@@ -268,6 +324,10 @@ table tr:hover {
 }
 
 /* TUTOR */
+
+#downloadLink a{
+  color: #0056b3;
+}
 
 /* Status Labels Tutor */
 .status-label {
