--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,7 +9,7 @@ body {
   color: #333;
 }
 
-a{
+a {
   text-decoration: none;
   color: #ffffff;
 }
@@ -186,6 +186,94 @@ main {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
 }
+
+.main {
+  flex-grow: 1;
+  display: flex;
+}
+
+.mainCard {
+  display: flex;
+}
+.block-1 {
+  flex-grow: 2;
+  display: flex;
+  justify-content: right;
+}
+
+.course-card {
+  flex-grow: 1;
+  height: 500px;
+  max-width: 500px;
+  margin: 2rem 0;
+  padding: 2rem;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.block-2 {
+  margin-left: 2rem;
+  flex-grow: 1;
+  display: flex;
+  justify-content: left;
+}
+
+.main-maskot {
+  
+  align-items: center; 
+  height: min-content; 
+  width: 180px;
+  margin-top: 2rem;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  transition: height 1s ease-in-out; 
+  animation: fadeIn 2s ease-in-out forwards; 
+}
+
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.main-maskot:hover {
+  transform: scale(1.1);
+}
+
+.img-maskot {
+  align-items: center;
+  width: 100%;
+  object-fit: cover;
+}
+
+.maskot-text {
+  display: inline-block; 
+  padding: 10px 12px; 
+  background-color: rgba(
+    255,
+    255,
+    255,
+    0.8
+  ); 
+  border-radius: 5px; 
+  max-width: 100%;
+  word-wrap: break-word;
+  font-weight: 600;
+}
+
+.maskot-text p {
+  margin: 0;
+}
 /* Fak Auswahl */
 .faculty-selection {
   margin: 2rem auto;
@@ -236,7 +324,9 @@ main {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s ease, transform 0.2s ease;
+  transition:
+    background-color 0.3s ease,
+    transform 0.2s ease;
 }
 
 .faculty-selection button:hover {
@@ -262,7 +352,7 @@ main {
   color: #ffffff;
 }
 
-#mainContent{
+#mainContent {
   display: block;
 }
 
@@ -325,7 +415,7 @@ table tr:hover {
 
 /* TUTOR */
 
-#downloadLink a{
+#downloadLink a {
   color: #0056b3;
 }
 
