--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -198,14 +198,25 @@ main {
 .block-1 {
   flex-grow: 2;
   display: flex;
-  justify-content: right;
+  justify-content: center;
 }
 
 .course-card {
+  text-align: center;
   flex-grow: 1;
-  height: 500px;
-  max-width: 500px;
-  margin: 2rem 0;
+  height: auto;
+  max-width: 100%;
+  margin: 2rem 5rem;
+  padding: 2rem;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.assignment-card {
+  width: 100%;
+  margin: 2rem 5rem;
   padding: 2rem;
   background: white;
   border-radius: 8px;
@@ -214,26 +225,50 @@ main {
 }
 
 .block-2 {
-  margin-left: 2rem;
-  flex-grow: 1;
+  margin-right: 5rem;
   display: flex;
-  justify-content: left;
+  flex-direction: column;
+  height: auto;
+  justify-content: center;
 }
 
 .main-maskot {
-  
-  align-items: center; 
-  height: min-content; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: min-content;
   width: 180px;
   margin-top: 2rem;
   background: white;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  transition: height 1s ease-in-out; 
-  animation: fadeIn 2s ease-in-out forwards; 
+  transition: transform 0.3s ease-in-out;
+  animation: fadeIn 2s ease-in-out forwards;
 }
 
+.main-maskot-ass {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: min-content;
+  width: 180px;
+  margin-top: 2rem;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  transition: scale 1s ease-in-out;
+  animation: fadeIn 2s ease-in-out forwards;
+}
+
+.main-maskot:hover {
+  background-color: rgb(162, 207, 227);
+}
+
+.main-maskot-ass:hover{
+  background-color: rgb(162, 207, 227);
+}
 
 @keyframes fadeIn {
   0% {
@@ -246,10 +281,6 @@ main {
   }
 }
 
-.main-maskot:hover {
-  transform: scale(1.1);
-}
-
 .img-maskot {
   align-items: center;
   width: 100%;
@@ -257,15 +288,10 @@ main {
 }
 
 .maskot-text {
-  display: inline-block; 
-  padding: 10px 12px; 
-  background-color: rgba(
-    255,
-    255,
-    255,
-    0.8
-  ); 
-  border-radius: 5px; 
+  display: inline-block;
+  padding: 10px 12px;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 5px;
   max-width: 100%;
   word-wrap: break-word;
   font-weight: 600;
@@ -403,9 +429,9 @@ table tr:hover {
 }
 
 /* SHOW RAUM */
-
 .room-photo img {
   height: 150px;
+  margin-right: 2rem;
   border-radius: 15px;
 }
 
